// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render correctly on a desktop 1`] = `
<PageHeader
  logo={
    <Title
      headingLevel="h1"
      size="xl"
    >
      ctrlshift
    </Title>
  }
  logoProps={
    Object {
      "href": "https://open.gov.sg",
      "rel": "noopener noreferrer",
      "target": "_blank",
    }
  }
  onNavToggle={[MockFunction]}
  showNavToggle={false}
  toolbar={<UNDEFINED />}
  topNav={
    <UNDEFINED
      variant="horizontal"
    />
  }
/>
`;

exports[`Header component should render correctly on a mobile 1`] = `
<PageHeader
  logo={
    <Title
      headingLevel="h1"
      size="xl"
    >
      ctrlshift
    </Title>
  }
  logoProps={
    Object {
      "href": "https://open.gov.sg",
      "rel": "noopener noreferrer",
      "target": "_blank",
    }
  }
  onNavToggle={[MockFunction]}
  showNavToggle={true}
  toolbar={<UNDEFINED />}
  topNav={false}
/>
`;
